# C-library

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
